src/test/deca/syntax/valid/personal/print_all_type.deca
// Description:
//    Programme affichant tout types de littéraux
//
// Resultats:
//    6
//    true
//    6.6
//    false
//
// Historique:
//    cree le 01/01/2025

{
        println(6);
        println(true);
        println(6.6);
        println(false);
}
