src/test/deca/syntax/invalid/personal/strange_identifier.deca
// Description:
//    tests de programme incorrect.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex  doit  donner une erreur (µ n est pas reconnu en deca).
//
// Historique:
//    cree le 01/01/2025
{
    int µ;
}